fix(popup): fix gap in popup

--- a/src/sass/layouts/_popup.sass
+++ b/src/sass/layouts/_popup.sass
@@ -249,7 +249,7 @@
                     .popup__head
                         gap: 15px
                         .popup__btn-bar
-                            gap: 10px
+                            gap: 15px
                             flex-direction: column-reverse
                             align-items: flex-start
                             .btn-primary
